--- a/Podcasts and News/Podcasts and News/Base.lproj/Main.storyboard
+++ b/Podcasts and News/Podcasts and News/Base.lproj/Main.storyboard
@@ -17,14 +17,15 @@
                         <subviews>
                             <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="79h-me-UUJ">
                                 <rect key="frame" x="0.0" y="44" width="414" height="769"/>
-                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.54390746359999997" green="0.73803108930000005" blue="0.2900826037" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="tintColor" red="0.59092080589999996" green="0.76547968389999999" blue="0.33323210479999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                     <wkPreferences key="preferences"/>
                                 </wkWebViewConfiguration>
                             </wkWebView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="0.056582584980000003" green="0.17274767160000001" blue="0.32158452269999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="79h-me-UUJ" secondAttribute="trailing" id="BOY-8i-cpF"/>
                             <constraint firstItem="79h-me-UUJ" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" id="jf8-lY-ky0"/>
@@ -54,14 +55,15 @@
                         <subviews>
                             <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WTA-PM-miL">
                                 <rect key="frame" x="0.0" y="44" width="414" height="769"/>
-                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.54390746359999997" green="0.73803108930000005" blue="0.2900826037" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="tintColor" red="0.59092080589999996" green="0.76547968389999999" blue="0.33323210479999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                     <wkPreferences key="preferences"/>
                                 </wkWebViewConfiguration>
                             </wkWebView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="0.056582584980000003" green="0.17274767160000001" blue="0.32158452269999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="O1u-W8-tvY" firstAttribute="bottom" secondItem="WTA-PM-miL" secondAttribute="bottom" id="ZMD-NM-s0p"/>
                             <constraint firstItem="WTA-PM-miL" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" id="jA2-5X-AsE"/>
@@ -88,8 +90,8 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" translucent="NO" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.54390746359999997" green="0.73803108930000005" blue="0.2900826037" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="tintColor" red="0.54390746359999997" green="0.73803108930000005" blue="0.2900826037" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <color key="barTintColor" red="0.056582584980000003" green="0.17274767160000001" blue="0.32158452269999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <color key="selectedImageTintColor" red="0.59092080589999996" green="0.76547968389999999" blue="0.33323210479999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </tabBar>
